--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.19",
     "sweetalert2": "^11.22.0",
     "sweetalert2-react-content": "^5.1.0"
   },
